// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`game > language > GameLanguage > Renders 1`] = `
<div>
  <div
    class="game-language"
  >
    <p
      class="language-info"
    />
    <div
      class="language-selector translation"
    >
      <span
        class="hidden sr"
      />
      <button
        class="translation-btn selected"
      >
        <span
          class="flag"
        >
          <img
            alt=""
            loading="lazy"
            src="https://flagcdn.com/w20/pl.png"
            srcset="https://flagcdn.com/w40/pl.png 2x"
            width="20"
          />
        </span>
      </button>
      <button
        class="translation-btn"
      >
        <span
          class="flag"
        >
          <img
            alt=""
            loading="lazy"
            src="https://flagcdn.com/w20/us.png"
            srcset="https://flagcdn.com/w40/us.png 2x"
            width="20"
          />
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`game > language > GameLanguage > Renders with context - game language en 1`] = `
<div>
  <div
    class="game-language"
  >
    <p
      class="language-info"
    >
      result-language-info
    </p>
    <div
      class="language-selector translation"
    >
      <span
        class="hidden sr"
      >
        screen reader info
      </span>
      <button
        class="translation-btn"
        title="GAME LANG PL"
      >
        <span
          class="label"
        >
          word-language-selector-btn-label-pl
        </span>
        <span
          class="flag"
        >
          <img
            alt=""
            loading="lazy"
            src="https://flagcdn.com/w20/pl.png"
            srcset="https://flagcdn.com/w40/pl.png 2x"
            width="20"
          />
        </span>
      </button>
      <button
        class="translation-btn selected"
        title="GAME LANG EN"
      >
        <span
          class="label"
        >
          word-language-selector-btn-label-en
        </span>
        <span
          class="flag"
        >
          <img
            alt=""
            loading="lazy"
            src="https://flagcdn.com/w20/us.png"
            srcset="https://flagcdn.com/w40/us.png 2x"
            width="20"
          />
        </span>
      </button>
      <button
        class="translation-btn"
        title="GAME LANG FR"
      >
        <span
          class="label"
        >
          word-language-selector-btn-label-fr
        </span>
        <span
          class="flag"
        >
          <img
            alt=""
            loading="lazy"
            src="https://flagcdn.com/w20/fr.png"
            srcset="https://flagcdn.com/w40/fr.png 2x"
            width="20"
          />
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`game > language > GameLanguage > Renders with context 1`] = `
<div>
  <div
    class="game-language"
  >
    <p
      class="language-info"
    >
      result-language-info
    </p>
    <div
      class="language-selector translation"
    >
      <span
        class="hidden sr"
      >
        screen reader info
      </span>
      <button
        class="translation-btn selected"
        title="result-language-selector-btn-title-pl"
      >
        <span
          class="label"
        >
          word-language-selector-btn-label-pl
        </span>
        <span
          class="flag"
        >
          <img
            alt=""
            loading="lazy"
            src="https://flagcdn.com/w20/pl.png"
            srcset="https://flagcdn.com/w40/pl.png 2x"
            width="20"
          />
        </span>
      </button>
      <button
        class="translation-btn"
        title="result-language-selector-btn-title-en"
      >
        <span
          class="label"
        >
          word-language-selector-btn-label-en
        </span>
        <span
          class="flag"
        >
          <img
            alt=""
            loading="lazy"
            src="https://flagcdn.com/w20/us.png"
            srcset="https://flagcdn.com/w40/us.png 2x"
            width="20"
          />
        </span>
      </button>
    </div>
  </div>
</div>
`;
